--- a/src/components/AboutList/AboutGCP/AboutGCP.css
+++ b/src/components/AboutList/AboutGCP/AboutGCP.css
@@ -32,8 +32,14 @@
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     max-width: 600px;
+    margin:10px auto;
   }
-  
+
+   p{
+    text-align: left;
+    font-weight: 500;
+    font-size: 20px;
+   }
   .info-grid {
     display: grid;
     grid-template-columns: auto 1fr;
@@ -79,4 +85,26 @@
   .bold {
     font-weight: bold;
     color: #000;
+  }
+
+  .company-info {
+    background: #f8f8f8;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    max-width: 1200px;
+    margin: 20px auto;
+  }
+  
+  .title {
+    font-size: 18px;
+    font-weight: bold;
+    color: #a86b42;
+    margin-bottom: 10px;
+  }
+  
+  .company-info p {
+    margin-bottom: 8px;
+    color: #333;
+    line-height: 1.6;
   }
