--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -32,7 +32,7 @@
   gap: 20px;
   justify-content: flex-end;
   width: 700px;
-  padding-left: 300px;
+  padding-left: 220px;
   padding-top: 15px;
 }
 .header-nav-container {
@@ -44,4 +44,33 @@
   display: flex;
   align-items: center;
   gap: 5px;
+}
+.user-menu {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+.dropdown {
+  position: absolute;
+  right: 0;
+  top: 100%;
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  width: 120px;
+  text-align: center;
+  padding: 8px;
+  margin-top: 5px;
+  display: none; /* Ẩn mặc định */
+}
+
+/* Khi có class "show" thì hiển thị */
+.dropdown.show {
+  display: block;
+}
+
+.header-icon{
+  margin-right: 5px;
+  font-weight: 600;
 }
