--- a/src/components/Event/Event.css
+++ b/src/components/Event/Event.css
@@ -79,3 +79,16 @@
   display: flex;
   align-items: center;
 }
+
+
+@media (max-width: 1024px) {
+  
+}
+
+@media (max-width: 768px) {
+  
+}
+
+@media (max-width: 480px) {
+  
+}
