--- a/src/components/Event/Event.css
+++ b/src/components/Event/Event.css
@@ -81,14 +81,24 @@
 }
 
 
-@media (max-width: 1024px) {
-  
-}
-
+/* Mobile (dưới 768px) */
 @media (max-width: 768px) {
-  
+  body {
+    font-size: 14px;
+  }
 }
 
-@media (max-width: 480px) {
+/* Tablet (từ 768px - 1024px) */
+@media (min-width: 768px) and (max-width: 1024px) {
+  body {
+    font-size: 16px;
+  }
+}
+
+/* Laptop & PC (trên 1024px) */
+@media (min-width: 1025px) {
+  body{
+    margin: 0 auto;
+  }
   
 }
