--- a/src/components/Apartment/Apartment.css
+++ b/src/components/Apartment/Apartment.css
@@ -93,14 +93,22 @@
 
 .nav-btn {
   background-color: rgba(255, 255, 255, 0.7);
-  width: 32px;
-  height: 32px;
+  width: 36px;
+  height: 36px;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   border: none;
+}
+
+.nav-btn-prev {
+  left: 10px; /* Adjust the position to the left */
+}
+
+.nav-btn-next{
+  right: 30px ; /* Adjust the position to the right */
 }
 
 /* Image Dots */
