--- a/src/components/ExploExper/ExploExper.css
+++ b/src/components/ExploExper/ExploExper.css
@@ -91,6 +91,7 @@
   
   .event-card img {
     width: 100%;
+    height: 80vh;
     object-fit: cover;
     transition: transform 0.3s ease-in-out;
   }
@@ -117,11 +118,15 @@
     justify-content: space-between;
     bottom: 0;
     width: 100%;
-    background: rgba(105, 104, 104, 0.5);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.62), rgba(0, 0, 0, 0.54), rgba(0, 0, 0, 0));;
     color: white;
     text-align: center;
     padding: 10px ;
     font-size: 16px;
+  }
+  .event-card h4{
+    font-size: 20px;
+    padding-left: 10px;
   }
   .right-icon{
     margin-right: 30px;
