--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -50,6 +50,13 @@
   display: inline-block;
   cursor: pointer;
 }
+.user-info {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  font-size: 18px;
+  font-weight: 600;
+}
 .dropdown {
   position: absolute;
   right: 0;
@@ -58,11 +65,12 @@
   border: 1px solid #ddd;
   border-radius: 6px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-  width: 120px;
+  width: auto; /* Allow the dropdown to expand according to its content */
   text-align: center;
   padding: 8px;
   margin-top: 5px;
   display: none; /* Ẩn mặc định */
+  white-space: nowrap; /* Prevent text from wrapping */
 }
 
 /* Khi có class "show" thì hiển thị */
@@ -73,4 +81,22 @@
 .header-icon{
   margin-right: 5px;
   font-weight: 600;
+}
+
+.btn-login {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  text-align: left;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-login:hover {
+  background-color: #f5f5f5;
+}
+
+.user-info:hover{
+  color: rgb(20, 109, 168);
 }
