--- a/src/components/Apartment/Apartment.css
+++ b/src/components/Apartment/Apartment.css
@@ -409,3 +409,31 @@
   color: white;
   flex: 1;
 }
+
+.discount-badge-ap {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color:red;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.sold-out-banner {
+  width: 160px;
+  height: 25px;
+  position: absolute;
+  top: 10px;
+  left: -40px;
+  background-color: red;
+  color: white;
+  padding: 5px 10px;
+  font-size: 16px;
+  font-weight: bold;
+  transform: rotate(-30deg);
+  z-index: 1;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+}
