--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -114,3 +114,39 @@
   font-size: 16px;
   padding: 8px 15px;
 }
+
+@media (max-width: 1024px) {
+  
+}
+
+@media (max-width: 768px) {
+  
+}
+
+@media (max-width: 480px) {
+  .form-contact {
+    
+    flex-direction: column;
+    width: 90%;
+  }
+
+  .contact-left{
+     margin-top: 400px;
+  }
+  .contact-left p{
+    font-size: 16px;
+ }
+ .contact-left h1{
+  font-size: 28px;
+}
+.img-contact{
+  height: 720px;
+ 
+}
+.custom-form .ant-input{
+  height: 35px;
+}
+
+
+ 
+}
