--- a/src/components/Mapcty/Mapcty.css
+++ b/src/components/Mapcty/Mapcty.css
@@ -1,3 +1,28 @@
 .map-cty-main {
   margin-top: 50px;
+  position: relative;
+ 
+}
+
+.map-cty-main iframe {
+  max-width: 100%;
+  height: 300px;
+}
+
+@media (max-width: 768px) {
+  .map-cty-main iframe {
+    height: 300px;
+  }
+}
+
+@media (max-width: 480px) {
+  .map-cty-main {
+    margin-top: 370px; /* Adjust margin for smaller screens */
+  }
+
+  .map-cty-main iframe {
+    height: 200px;
+    margin-top: 20px; /* Reduce margin for better spacing */
+
+  }
 }
