--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -86,9 +86,12 @@
   z-index: 10;
 }
 
-.user-menu:hover .dropdown {
-  display: block; /* Show dropdown on hover */
+.user-menu.active .dropdown {
+  display: flex;
+  flex-direction: column;
 }
+
+
 
 .header-nav .ant-dropdown {
   position: relative; /* Ensure dropdown is positioned relative to its parent */
@@ -114,10 +117,6 @@
 
 .header-nav .ant-dropdown-menu-item:hover {
   background-color: #f5f5f5;
-}
-
-.user-menu:hover .dropdown {
-  display: block; /* Show dropdown on hover */
 }
 
 .header-icon{
