--- a/src/components/Apartment/Apartment.css
+++ b/src/components/Apartment/Apartment.css
@@ -51,6 +51,19 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.listing-card.disabled {
+  position: relative;
+  pointer-events: auto;
+}
+
+.listing-card.disabled .nav-buttons {
+  pointer-events: none;
+}
+
+.listing-card.disabled .image-dots {
+  pointer-events: none;
+}
+
 /* Listing Image */
 .listing-image {
   position: relative;
@@ -107,8 +120,8 @@
   left: 10px; /* Adjust the position to the left */
 }
 
-.nav-btn-next{
-  right: 30px ; /* Adjust the position to the right */
+.nav-btn-next {
+  right: 30px; /* Adjust the position to the right */
 }
 
 /* Image Dots */
@@ -414,7 +427,7 @@
   position: absolute;
   top: 10px;
   right: 10px;
-  background-color:red;
+  background-color: red;
   color: white;
   padding: 5px 10px;
   border-radius: 5px;
