--- a/src/components/Slide/Slide.css
+++ b/src/components/Slide/Slide.css
@@ -1,10 +1,12 @@
 .slide-container {
   margin-top: 100px;
-  width: 1200px;
+  max-width: 1920px;
+  width: 100%;
   height: 800px;
   margin: 0 auto;
   overflow: hidden;
   position: relative;
+ 
 }
 
 .background-main {
@@ -102,7 +104,7 @@
 
   .custom-arrow {
    display: none;
-  }
+  } 
 
 
 }
