--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -18,12 +18,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(
-    87,
-    87,
-    87,
-    0.5
-  ); /* Điều chỉnh độ tối bằng cách thay đổi giá trị alpha (0.5) */
+  background-color: rgba(87, 87, 87, 0.5);
   z-index: 1;
 }
 
@@ -76,6 +71,7 @@
   padding: 0 30px !important;
   font-size: 16px !important;
   min-width: 180px;
+  color: white;
 }
 
 .send-button:hover {
@@ -116,37 +112,30 @@
 }
 
 @media (max-width: 1024px) {
-  
 }
 
 @media (max-width: 768px) {
-  
 }
 
 @media (max-width: 480px) {
   .form-contact {
-    
     flex-direction: column;
     width: 90%;
   }
 
-  .contact-left{
-     margin-top: 400px;
+  .contact-left {
+    margin-top: 400px;
   }
-  .contact-left p{
+  .contact-left p {
     font-size: 16px;
- }
- .contact-left h1{
-  font-size: 28px;
-}
-.img-contact{
-  height: 720px;
- 
-}
-.custom-form .ant-input{
-  height: 35px;
-}
-
-
- 
+  }
+  .contact-left h1 {
+    font-size: 28px;
+  }
+  .img-contact {
+    height: 720px;
+  }
+  .custom-form .ant-input {
+    height: 35px;
+  }
 }
