--- a/src/components/AboutList/AboutContact/AboutContact.css
+++ b/src/components/AboutList/AboutContact/AboutContact.css
@@ -99,7 +99,7 @@
 
 .contact-right-column {
   padding: 40px;
-  background-color: #3366cc;
+  background-color: #5380d9;
   border-radius: 0.5rem;
 }
 
