--- a/src/components/Foryou/Foryou.css
+++ b/src/components/Foryou/Foryou.css
@@ -42,7 +42,7 @@
 
 @media (max-width: 1024px) {
   .foryou-container {
-    padding: 0 20px;
+    /* padding: 0 20px; */
   }
 
   .icon-grid-container {
@@ -87,8 +87,10 @@
 /* Mobile Nhỏ (Dưới 480px) */
 @media (max-width: 480px) {
   .foryou-container {
-    width: 460px;
-    margin-top: 10px;
+    max-width: 390px;
+    width:100%;
+    margin: 20px 50px 10px 20px;
+
   }
 
    .icon-grid-container{
