--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,7 +11,9 @@
 }
 .header-logo {
   width: 115px;
-  height: 90px;
+  height: 80px;
+  object-fit: contain;
+  margin: 10px auto;
 }
 .header-container {
   display: flex;
@@ -234,6 +236,7 @@
 
   .header-logo-container {
     flex: 1;
+    
   }
 
   .header-nav-container {
@@ -288,9 +291,10 @@
   }
 
   .header-logo {
-    margin-left: -300px;
-    width: 130px;
+    float: left;
+    width: 88px;
     height: 60px;
+ 
   }
 
   .header-nav {
