--- a/src/components/ApartmentDetail/ApartmentDetail.css
+++ b/src/components/ApartmentDetail/ApartmentDetail.css
@@ -225,9 +225,9 @@
 
 @media (max-width: 480px) {
   .apartment-detail-container {
-    max-width: 480px;
+    max-width: 438px;
     width: 100%;
-    margin: 0;
+    margin: 30px 0;
   }
 
   .main-image-container {
