--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,8 +1,9 @@
 .main-contact {
   position: relative;
   width: 100%;
-  height: 50vh;
-  margin-top: 50px;
+  max-width: 1920px;
+  height: 44vh;
+  margin:50px auto;
 }
 
 .img-contact {
@@ -118,6 +119,10 @@
 }
 
 @media (max-width: 480px) {
+  .main-contact {
+    height: 27vh;
+    margin-bottom: 416px;
+  }
   .form-contact {
     flex-direction: column;
     width: 90%;
@@ -133,7 +138,7 @@
     font-size: 28px;
   }
   .img-contact {
-    height: 720px;
+    height: 614px;
   }
   .custom-form .ant-input {
     height: 35px;
