--- a/src/components/Food/Food.css
+++ b/src/components/Food/Food.css
@@ -26,3 +26,36 @@
   .food-item img:hover {
     transform: scale(1.05);
   }
+
+  @media (max-width: 768px) {
+    .food-container {
+      grid-template-columns: repeat(2, 1fr); /* Chuyển thành 2 cột */
+    }
+  }
+  
+  /* Khi màn hình nhỏ hơn hoặc bằng 480px (mobile) */
+  @media (max-width: 480px) {
+    .food-container {
+      grid-template-columns: 1fr; /* Chuyển thành 1 cột */
+      margin-top: 60px; /* Giảm khoảng cách trên cho nhỏ hơn */
+    }
+  }
+  
+  .food-column {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  
+  .food-item img {
+    width: 100%;
+    height: 500px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+  }
+  
+  /* Hiệu ứng hover cho ảnh */
+  .food-item img:hover {
+    transform: scale(1.05);
+  }
