--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -215,6 +215,54 @@
     padding-top: 10px;
     gap: 10px;
   }
+  .header-container {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  .header-logo-container {
+    flex: 1;
+    
+  }
+  .header-nav-container {
+    display: none;
+    flex-direction: column-reverse;
+    position: absolute;
+    top: 60px;
+    right: 20px;
+    background-color: #fff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    overflow: visible;
+  }
+
+  .header-nav-container.active {
+    display: flex;
+  }
+  .hamburger {
+    margin-right: -5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 24px;
+    height: 18px;
+    cursor: pointer;
+  }
+
+  .hamburger div {
+    width: 100%;
+    height: 3px;
+    background-color: #333;
+  }
+  .header-logo{
+    float: left;
+  }
+
+  
 }
 
 /* Responsive cho màn hình rất nhỏ (dưới 480px) */
@@ -327,8 +375,13 @@
     margin-left: 25px;
   }
 
+  .popup-header{
+    display: flex;
+    flex-direction: column;
+  }
+
   .user-menu .dropdown {
-    width: 116%; /* Adjust width to fit content */
+    width: 108%; /* Adjust width to fit content */
     position: absolute; /* Position relative to user-info */
     top: 139%; /* Place it directly below user-info */
     left: -11px; /* Align with the left edge of user-info */
@@ -341,7 +394,9 @@
     display: flex; /* Ensure dropdown is visible */
     flex-direction: column; /* Stack items vertically */
   }
-
+  .option-child{
+    font-size: 13px;
+  }
   .dropdown-container {
     display: block;
   }
@@ -358,11 +413,19 @@
   }
   .dropdown-submenu-btn {
     width: 108px;
+    background-color: white;
+  }
+  .dropdown-submenu {
+   padding-left: 10px;
+   
+  }
+  .dropdown-btn{
+    background-color: white;
   }
   .dropdown-submenu-item {
     width: 100%;
     height: 30px;
-    background-color: #f9f9f9;
+    background-color: white;
     margin: 5px 0;
     border-radius: 5px;
   }
