--- a/src/components/ExploExper/ExploExper.css
+++ b/src/components/ExploExper/ExploExper.css
@@ -83,6 +83,7 @@
     gap: 20px;
     margin-top: 20px;
   }
+
   
   .event-card {
     position: relative;
@@ -97,6 +98,7 @@
     object-fit: cover;
     transition: transform 0.3s ease-in-out;
   }
+
   .event-card-2{
     width: 595px; 
     height: 400px;
@@ -185,7 +187,7 @@
 
 @media screen and (max-width: 480px) {
   .event-container2 {
-    max-width: 480px;
+    max-width: 484px;
     width: 100%;  /* Đảm bảo không bị ghi đè */
     margin: 22px auto;
     padding: 0;
@@ -194,6 +196,9 @@
   }
   .event-main{
     flex-direction: column-reverse;
+    width: 100%;
+    max-width: 420px;
+    margin: 0 auto;
   }
   .event-card-1{
     height: 600px;
