--- a/src/components/TestPage/Hiden.css
+++ b/src/components/TestPage/Hiden.css
@@ -313,7 +313,7 @@
   justify-content: center;
   padding: 20px;
 }
-
+/* 
 .event-card {
   width: 300px;
   height: 500px;
@@ -323,7 +323,7 @@
   background: white;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
+} */
 
 .event-image-container {
   width: 300px;
